cambiate informazioni del footer

--- a/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
@@ -56,9 +56,9 @@
                     <div class="col-md-4">
                         <h3>Contattaci</h3>
                         <ul>
-                            <li>Indirizzo: 123 Main Street , IT 50122</li>
+                            <li>Indirizzo: via Lampredotto 33, IT 50100</li>
                             <li>Telefono: (123) 456-7890</li>
-                            <li>Email: info@museum.com</li>
+                            <li>Email: negoziomuseolavoro@gmail.com</li>
                         </ul>
                     </div>
                     <div class="col-md-4">
