--- a/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     @RenderSection("links", required:false)
 </head>
 <body>
@@ -29,37 +30,15 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="User" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="User" asp-action="Products">Negozio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="Admin" asp-action="Index">Amministrazione</a>
-                        </li>
+                        @if (User.IsInRole("Admin")) {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Admin" asp-action="Index">Amministrazione</a>
+                            </li>
+                        }
                         <partial name="_LoginPartial" />
                     </ul>
                     @RenderSection("SearchBar", required: false)
                 </div>
-            <a class="navbar-brand" asp-controller="User" asp-action="Index">Il tuo Museo</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-
-                    @if (User.IsInRole("Admin"))
-                    {
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="Admin" asp-action="Index">Amministrazione</a>
-                        </li>
-                    }
-                    <li>
-                        <partial name="_LoginPartial" />
-                    </li>
-                    
-                </ul>
             </div>
         </nav>
     </header>
@@ -68,42 +47,30 @@
         @RenderBody()
     </main>
 
-    <footer class="ps-1">
-        <footer>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4">
-                        <h3>Chi Siamo</h3>
-                        <p>Siamo un museo che preserva e celebra la cultura e l'arte attraverso mostre uniche e programmi educativi. La nostra visione è rendere la cultura accessibile a tutti.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <h3>Contattaci</h3>
-                        <ul>
-                            <li>Indirizzo: via Lampredotto 33, IT 50100</li>
-                            <li>Telefono: (123) 456-7890</li>
-                            <li>Email: negoziomuseolavoro@gmail.com</li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4">
-                        <h3>Follow Us</h3>
-                        <ul class="social-icons">
-                            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-                            <li>
-                                <a href="https://www.facebook.com/profile.php?id=100090037185054">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://twitter.com/NegozioMuseo"><i class="fab fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://www.instagram.com/tuo-museo"><i class="fab fa-instagram"></i></a>
-                            </li>
-                        </ul>
-                    </div>
+    <footer class="container-fluid">
+        <div class="row text-center d-flex justify-content-between">
+            <div class="col-md-4 col-12">
+                <h3>Chi Siamo</h3>
+                <p class="px-3">Siamo un museo che preserva e celebra la cultura e l'arte attraverso mostre uniche e programmi educativi. La nostra visione è rendere la cultura accessibile a tutti.</p>
+            </div>
+            <div class="col-md-4 col-12">
+                <h3>Contattaci</h3>
+                <p>
+                    Indirizzo: via Lampredotto 33, IT 50100<br />
+                    Telefono: (123) 456-7890<br />
+                    Email: negoziomuseolavoro@gmail.com
+                </p>
+            </div>
+            <div class="col-md-1 invisible"></div>
+            <div class="col-md-3 col-12">
+                <h3>Follow Us</h3>
+                <div class="social-icons d-flex justify-content-center gap-4">
+                    <a href="https://www.facebook.com/profile.php?id=100090037185054"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://twitter.com/NegozioMuseo"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/tuo-museo"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
-        </footer>
+        </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
