--- a/ShopMuseoProgettoFinale/Views/Shared/_LoginPartial.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
         <a id="manage" class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
     </li>
     <li class="nav-item">
-        <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+        <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "User", new { area = "" })">
             <button id="logout" type="submit" class="nav-link btn btn-link">Logout</button>
         </form>
     </li>
