--- a/ShopMuseoProgettoFinale/Views/User/Index.cshtml
+++ b/ShopMuseoProgettoFinale/Views/User/Index.cshtml
@@ -170,26 +170,38 @@
                             });
 
 
-                            $("#productsDiv").append(
-                                `<div class="col-lg-4 p-3">
-                                                                                            <a href='/User/Buy/${product.id}' class="url-box text-decoration-none" style="color:white">
-                                                                                        <figure class='newsCard news-Slide-up '>
-                                                                                            <img class="object-fit-cover" src="${product.pictureUrl}" />
-                                                                                            <div class='newsCaption px-4'>
-                                                                                                <div class="d-flex align-items-center justify-content-between cnt-title">
-                                                                                                    <h5 class='newsCaption-title text-white m-0'>${product.name}</h5>
-                                                                                                    <i class="fas fa-arrow-alt-circle-right "></i>
-                                                                                                </div>
-                                                                                                <div class='newsCaption-content d-flex'>
-                                                                                                    <p class="col-10 py-3 px-0"> ${formatter.format(product.price)} </br></br>
-                                                                                      </a>                              <button class="likeButton" style="border:none; background-color:transparent;"><i class="fas fa-heart"></i></button>
-                                                                                                </div>
-                                                                                            </div>
-                                                                                            <span class="overlay"></span>
-
-                                                                                        </figure>
-
-                                                                                </div>`);
+                            $("#productsDiv").append(`
+    <div class="col-lg-4 p-3">
+        <a href="/User/Buy/${product.id}" class="url-box text-decoration-none text-white">
+        </a>
+        <figure class="newsCard news-Slide-up ">
+            <a href="/User/Buy/${product.id}" class="url-box text-decoration-none text-white">
+                <img class="object-fit-cover" src="${product.pictureUrl}">
+            </a>
+            <div class="newsCaption px-4">
+                <a href="/User/Buy/${product.id}" class="url-box text-decoration-none text-white">
+                    <div class="d-flex align-items-center justify-content-between cnt-title">
+                        <h5 class="newsCaption-title text-white m-0">${product.name}</h5>
+                        <i class="fas fa-arrow-alt-circle-right " aria-hidden="true"></i>
+                    </div>
+                </a>
+                <div class="newsCaption-content d-flex">
+                    <a href="/User/Buy/${product.id}" class="url-box text-decoration-none text-white">
+                    </a>
+                    <p class="col-10 py-3 px-0">
+                        <a href="/User/Buy/${product.id}" class="url-box text-decoration-none text-white">
+                            ${formatter.format(product.price)} <br><br>
+                        </a>
+                        <button class="likeButton border-0 bg-transparent">
+                            <i class="fas fa-heart" aria-hidden="true"></i>
+                        </button>
+                    </p>
+                </div>
+            </div>
+            <span class="overlay"></span>
+        </figure>
+    </div>
+                            `);
                         });
                     }
 
