--- a/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
@@ -74,7 +74,7 @@
                                 <a href="https://twitter.com/NegozioMuseo"><i class="fab fa-twitter"></i></a>
                             </li>
                             <li>
-                                <a href="https://www.instagram.com/tuo-museo"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.instagram.com/negoziomuseofirenze/"><i class="fab fa-instagram"></i></a>
                             </li>
                         </ul>
                     </div>
