modifica delle card

--- a/ShopMuseoProgettoFinale/Views/User/Index.cshtml
+++ b/ShopMuseoProgettoFinale/Views/User/Index.cshtml
@@ -125,7 +125,7 @@
         </div>
     </div>
     <div class="row d-flex justify-content-center">
-        <div class="col-12 col-lg-9 col-md-10 d-flex justify-content-center">
+        <div class="col-12 col-lg-11 col-md-11 d-flex justify-content-center">
             <div id="productsDiv" class="row"></div>
             <div id="noProductsDiv" class="d-none text-center"> No Products To Show </div>
         </div>
@@ -171,7 +171,7 @@
 
 
                             $("#productsDiv").append(
-                                `<div class="col-lg-4 p-3">
+                                `<div class="col-lg-4 col-xlg-4 col-md-6 p-3">
                                                                                             <a href='/User/Buy/${product.id}' class="url-box text-decoration-none" style="color:white">
                                                                                         <figure class='newsCard news-Slide-up '>
                                                                                             <img class="object-fit-cover" src="${product.pictureUrl}" />
