--- a/ShopMuseoProgettoFinale/wwwroot/css/Index.css
+++ b/ShopMuseoProgettoFinale/wwwroot/css/Index.css
@@ -605,6 +605,9 @@ body {
     h3 {
         text-align: center;
     }
+
+    /* ------------------------ */
+
 }
 
 /*-------------------------------------------------*/
@@ -707,7 +710,7 @@ figure img {
     bottom: 31px;
     left: 0;
     width: 100%;
-    height: 35%;
+    height: 39%;
     z-index: 10;
     padding: 15px;
     -webkit-transform: translateY(80%);
