--- a/ShopMuseoProgettoFinale/Views/User/Buy.cshtml
+++ b/ShopMuseoProgettoFinale/Views/User/Buy.cshtml
@@ -20,6 +20,7 @@
                 <p id="productDescription"></p>
                 <p class="fw-bold" id="quantityLeftNotice"></p>
                 <p id="productPrice"></p>
+                <p class="fs-3"> <i class="fas fa-heart text-danger" aria-hidden="true"></i> <span id="likesCount"></span></p>
 
                 @* Form *@
                 <form id="postPurchase" class="row needs-validation" novalidate>
@@ -81,6 +82,12 @@
                 $('#quantityInput').attr('max', res.data.quantity);
                 $('[bs-validation-for="Quantity"]')[0].innerHTML += ` ${res.data.quantity}`;
 
+                axios.get(`https://localhost:7128/api/likes/${id}`)
+                    .then(function (res) {
+                        let count = res.data.length;
+                        $('#likesCount').html(count);
+                    })
+                    .catch();
 
                 let quantityLeftNotice = $('#quantityLeftNotice');
                 if (res.data.quantity == 0) {
