--- a/ShopMuseoProgettoFinale/Views/User/Index.cshtml
+++ b/ShopMuseoProgettoFinale/Views/User/Index.cshtml
@@ -125,7 +125,7 @@
         </div>
     </div>
     <div class="row d-flex justify-content-center">
-        <div class="col-12 col-lg-11 col-md-11 d-flex justify-content-center">
+        <div class="col-12 col-lg-9 col-md-10 d-flex justify-content-center">
             <div id="productsDiv" class="row"></div>
             <div id="noProductsDiv" class="d-none text-center"> No Products To Show </div>
         </div>
@@ -171,25 +171,25 @@
 
 
                             $("#productsDiv").append(
-                                `<div class="col-lg-4 col-xlg-4 col-md-6 p-3">
-                                                                                            <a href='/User/Buy/${product.id}' class="url-box text-decoration-none" style="color:white">
-                                                                                        <figure class='newsCard news-Slide-up '>
-                                                                                            <img class="object-fit-cover" src="${product.pictureUrl}" />
-                                                                                            <div class='newsCaption px-4'>
-                                                                                                <div class="d-flex align-items-center justify-content-between cnt-title">
-                                                                                                    <h5 class='newsCaption-title text-white m-0'>${product.name}</h5>
-                                                                                                    <i class="fas fa-arrow-alt-circle-right "></i>
-                                                                                                </div>
-                                                                                                <div class='newsCaption-content d-flex'>
-                                                                                                    <p class="col-10 py-3 px-0"> ${formatter.format(product.price)} </br></br>
-                                                                                      </a>                              <button class="likeButton" style="border:none; background-color:transparent;"><i class="fas fa-heart"></i></button>
-                                                                                                </div>
+                            `<div class="col-md-4 p-3">
+                                                                                        <a href='/User/Buy/${product.id}' class="url-box text-decoration-none" style="color:white">
+                                                                                    <figure class='newsCard news-Slide-up '>
+                                                                                        <img class="object-fit-cover" src="${product.pictureUrl}" />
+                                                                                        <div class='newsCaption px-4'>
+                                                                                            <div class="d-flex align-items-center justify-content-between cnt-title">
+                                                                                                <h5 class='newsCaption-title text-white m-0'>${product.name}</h5>
+                                                                                                <i class="fas fa-arrow-alt-circle-right "></i>
                                                                                             </div>
-                                                                                            <span class="overlay"></span>
+                                                                                            <div class='newsCaption-content d-flex'>
+                                                                                                <p class="col-10 py-3 px-0"> ${formatter.format(product.price)} </br></br>
+                                                                                    </a>                              <button class="likeButton" style="border:none; background-color:transparent;"><i class="fas fa-heart"></i></button>
+                                                                                            </div>
+                                                                                        </div>
+                                                                                        <span class="overlay"></span>
 
-                                                                                        </figure>
+                                                                                    </figure>
 
-                                                                                </div>`);
+                                                                            </div>`);
                         });
                     }
 
