Aggiunto il redirect alla registrazione quando provi a mettere like senza essere in un account

--- a/ShopMuseoProgettoFinale/Views/User/Index.cshtml
+++ b/ShopMuseoProgettoFinale/Views/User/Index.cshtml
@@ -228,7 +228,7 @@
                                     button.removeClass('text-danger');
                                 })
                                 .catch(function (err) {
-                                    console.log(err);
+                                    window.location.href = "https://localhost:7128/Identity/Account/Register"
                                 });
                         } else {
                             axios.put(`https://localhost:7128/api/addlike/${productId}`)
@@ -236,7 +236,7 @@
                                     button.addClass('text-danger');
                                 })
                                 .catch(function (err) {
-                                    console.log(err);
+                                    window.location.href = "https://localhost:7128/Identity/Account/Register"
                                 });
                         }
                     });
