--- a/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     @RenderSection("links", required:false)
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
     <header>
         <nav class="navbar navbar-expand-lg px-3">
             <div class="container-fluid">
@@ -47,7 +47,8 @@
         @RenderBody()
     </main>
 
-    <footer class="container-fluid">
+    <footer class="container-fluid mt-auto">
+        
         <div class="row text-center d-flex justify-content-between">
             <div class="col-md-4 col-12">
                 <h3>Chi Siamo</h3>
