--- a/ShopMuseoProgettoFinale/Views/Shared/_LoginLayout.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Shared/_LoginLayout.cshtml
@@ -2,7 +2,11 @@
     Layout = "_Layout.cshtml";
 }
 
-<div class="container-fluid">
+@section links {
+    <link rel="stylesheet" href="~/css/login.css" />
+}
+
+<div class="container-fluid loginDiv">
     <div class="row d-flex justify-content-center">
         <div class="col-12 col-md-10">
             @RenderBody()
