Aggiustato bg delle cards in admin

--- a/ShopMuseoProgettoFinale/Views/Shared/_AdminProductCard.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Shared/_AdminProductCard.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Product
 @using ShopMuseoProgettoFinale.Controllers
 
-<div class="card w-100 rounded-0 border-0 text-center d-flex flex-column align-items-center">
+<div class="card w-100 rounded-0 border-0 text-center d-flex flex-column align-items-center bg-transparent">
     <div class="classHover d-flex flex-column align-items-center flex-grow-1 w-100">
         <div class="ratio ratio-4x3">
             <img src="@Model.PictureUrl" alt="" class="card-img-top rounded-0 object-fit-contain" />
