--- a/ShopMuseoProgettoFinale/Views/Shared/_LoginLayout.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Shared/_LoginLayout.cshtml
@@ -7,8 +7,8 @@
 }
 
 <div class="container-fluid loginDiv">
-    <div class="row d-flex justify-content-center">
-        <div class="col-12 col-md-10">
+    <div class="row d-flex justify-content-center text-center">
+        <div class="col-12 col-md-4">
             @RenderBody()
         </div>
     </div>
